testing/tests/ui/let.stderr
error: reserved keyword `_` cannot be used here
 --> <source attribute>:1:7
       "_ = 2 %}"
 --> tests/ui/let.rs:4:21
  |
4 | #[template(source = r#"{% let _ = 2 %}"#, ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^

error: reserved keyword `_` cannot be used here
 --> <source attribute>:1:7
       "[_] = [2] %}"
 --> tests/ui/let.rs:8:21
  |
8 | #[template(source = r#"{% let [_] = [2] %}"#, ext = "html")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^

error: reserved keyword `_` cannot be used here
 --> <source attribute>:1:12
       "_] %}"
  --> tests/ui/let.rs:12:21
   |
12 | #[template(source = r#"{% let x = [_] %}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^

error: reserved keyword `_` cannot be used here
 --> <source attribute>:1:7
       "_ + 12) != 0 %}{% endif %}"
  --> tests/ui/let.rs:16:21
   |
16 | #[template(source = r#"{% if (_ + 12) != 0 %}{% endif %}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: reserved keyword `_` cannot be used here
 --> <source attribute>:1:12
       "_ %}{% endif %}"
  --> tests/ui/let.rs:20:21
   |
20 | #[template(source = r#"{% if 12 == _ %}{% endif %}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: reserved keyword `_` cannot be used here
 --> <source attribute>:1:9
       "_ %}{% endmatch %}"
  --> tests/ui/let.rs:24:21
   |
24 | #[template(source = r#"{% match _ %}{% endmatch %}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
